--- a/project01/css/style_messi.css
+++ b/project01/css/style_messi.css
@@ -1,32 +1,86 @@
+@charset "UTF-8";
+/* reset */
+h1 {
+  color: #333;
+}
+
 ul {
   margin: 0;
   padding: 0;
-  list-style: none; }
+  list-style: none;
+}
 
-h1 {
-  color: #333;
-  padding-bottom: 1em;
-  border-bottom: 2px solid #333; }
+a {
+  text-decoration: none;
+}
 
-.book_header {
-  display: block;
-  width: 40%;
-  height: 160px; }
+img {
+  border: 0;
+}
 
+.ell {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: break-word;
+}
+
+/* style */
 .list_book {
   overflow: hidden;
-  height: 100%; }
-  .list_book > li {
-    float: right;
-    width: 30%; }
+}
+.list_book > li {
+  float: left;
+  width: 40%;
+  min-width: 200px;
+}
 
 .link_box {
   position: relative;
   display: block;
-  height: 160px; }
-  .link_box img {
-    width: 100%; }
-  .link_box .title {
-    display: block; }
+  height: 134px;
+}
+.link_box:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  content: '';
+}
+.link_box img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  margin: auto 0;
+}
+.link_box .title {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 5px 2px;
+  background-color: rgba(0, 0, 0, 0.6);
+  font-size: 0.8em;
+  font-weight: normal;
+  text-align: left;
+  color: #fff;
+}
+
+.bg_dimmed {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 27px;
+  background-color: #000;
+  /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
+  /* IE 5-7 */
+  filter: alpha(opacity=60);
+  /* 표준 */
+  opacity: 0.6;
+}
 
 /*# sourceMappingURL=style_messi.css.map */
