--- a/project04/css/style_messi.css
+++ b/project04/css/style_messi.css
@@ -1,11 +1,13 @@
 /* reset */
 h1 {
-	color: #333;
+  color: #333;
 }
 
 /* style */
 .flex-box {
-	width: 100px;
-	height: 100px;
-	border: 1px solid;
+  width: 30%;
+  padding-top: 30%;
+  border: 1px solid;
 }
+
+/*# sourceMappingURL=style_messi.css.map */
