--- a/project04/css/style_midking.css
+++ b/project04/css/style_midking.css
@@ -2,10 +2,15 @@
 h1 {
 	color: #333;
 }
-
-/* style */
-.flex-box {
+div{
 	width: 100px;
 	height: 100px;
 	border: 1px solid;
+	background:#3B76DE url(http://cfile2.uf.tistory.com/image/17294C3350AB9C1853A3A0) no-repeat 0 0;
+	background-size:150%;
+}
+
+/* style */
+.flex-box {
+	padding:5%;
 }
